update gitignore and enhance weather dashboard features

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,35 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Clacky-related configuration
+.1024
+.environments.yaml
+
+# React/TypeScript build artifacts
+build/
+out/
+
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Coverage reports
+coverage/
+*.lcov
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# ESLint cache
+.eslintcache
+
+# Temporary folders
+tmp/
+temp/
